--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   },
   "scripts": {
     "test": "istanbul cover node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js",
-    "coverage": "istanbul cover --report cobertura node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js && mocha test/*_test.js test/api/*_test.js --reporter m
-
-ocha-junit-reporter --reporter-options mochaFile=./results/test-results.xml",
+    "coverage": "istanbul cover --report cobertura node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js && mocha test/*_test.js test/api/*_test.js --reporter mocha-junit-reporter --reporter-options mochaFile=./results/test-results.xml",
     "start": "node server.js",
     "clean:build": "node_modules/.bin/rimraf $npm_package_config_distribution",
     "create:build": "node_modules/.bin/mkdirp $npm_package_config_build",
@@ -24,9 +22,7 @@ ocha-junit-reporter --reporter-options mochaFile=./results/test-results.xml",
     "build": "npm run clean",
     "prepackage": "echo Packaging $npm_package_config_service v\"$npm_package_version\" service",
     "package": " npm run build && npm run copy",
-    "postpackage": "cd $npm_package_config_build && zip -r ../$npm_package_config_service_short-\"$npm_package_version\".zip . && cd ../.. && node_modules/.bin/rimraf $
-
-npm_package_config_build",
+    "postpackage": "cd $npm_package_config_build && zip -r ../$npm_package_config_service_short-\"$npm_package_version\".zip . -i . && cd ../.. && node_modules/.bin/rimraf $npm_package_config_build",
     "predist": "echo Preparing to package $npm_package_config_service v\"$npm_package_version\" service",
     "dist": "npm run build && npm run package",
     "postdist": "echo Successfully packaged $npm_package_config_service v\"$npm_package_version\" service"
